# telegram-send

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  run_tests.bash
examples/: apod.py  wait_reply_example.py
telegram_send/: __init__.py  telegram_send.py
