[project]
name = "telegram-send-wait"
dynamic = ["version"]
description = "Send messages over Telegram and wait for a text reply from the command-line (fork of telegram-send)."
readme = "README.md"
authors = [
    {name = "Pablo Ventura", email = "pablogventura@gmail.com"},
    {name = "Rahiel Kasim", email = "rahielkasim@gmail.com"},
]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities"
]
keywords = ["telegram", "send", "message", "wait", "reply"]
dependencies = [
    "colorama>=0.4.6 ; sys_platform == 'win32'",
    "platformdirs>=4.5.1",
    "python-telegram-bot==22.5",
]

[project.urls]
homepage = "https://github.com/pablogventura/telegram-send"
issues = "https://github.com/pablogventura/telegram-send/issues"

[project.scripts]
telegram-send-wait = "telegram_send.telegram_send:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "telegram_send/version.py"

[tool.hatch.build.targets.wheel]
packages = ["telegram_send"]

[tool.flake8]
exclude = "build"
max-line-length = 120

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pdoc>=16.0.0",
    "ruff>=0.14.11",
]
